--- a/suggestons/suggestions.html
+++ b/suggestons/suggestions.html
@@ -4,7 +4,7 @@
 <head>
     <title>To show suggestions</title>
     <link rel="stylesheet" href="suggestions.css">
-    <script src="suggestions.js"></script>
+    <script src="../js_Questions/js1.js"></script>
 </head>
 
 <body>
